# AISecurity

./: .gitignore  Dockerfile  GEMINI.md  PRESS_RELEASE.md  QUICKSTART.md  README.md  README_NEW.md  SENTINEL_Strike_Demo.ipynb  SENTINEL_WALKTHROUGH.md  SKILL.md  attack_report.html  gandalf_report.md  index-en.html  index.html  install.sh  pyproject.toml  requirements.txt  test_evasion_techniques.py
.agent/: PROJECT_CONTEXT.md
.agent/workflows/: context-update.md  context.md  dev.md  documentation-sync.md  engine-verification.md  release-checklist.md  rnd-daily.md
.github/workflows/: ci.yml  immune-ci.yml  lint.yml  update-signatures.yml
.kiro/steering/: product.md  structure.md  tech.md
benchmarks/: aprielguard_benchmark.py
demos/: attack_demo.py  gemini_attack_demo.py  list_gemini_models.py
docs/: CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  README.md  devto_article.md  index.html
engines/: __init__.py  canary_tokens.py
immune/: .gitignore  Dockerfile.agent  Dockerfile.hive  README.md  config.example.json  docker-compose.yml  download_hive.sh  hive_mini.c  requirements.txt  setup.sh
nemotron/: README.md  dataset_converter.py  nemotron_guard.py  requirements.txt  train.py  upload_to_hf.py
rlm-toolkit/: CHANGELOG.md  README.md  pyproject.toml
scripts/: fetch_signatures.py  split_signatures.py  update_manifest.py  validate_signatures.py
shield/: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile.win  README.md  SECURITY.md  docker-compose.yml  package.json
shield/.github/workflows/: ci.yml
shield/articles/: gateway_to_c_devto.md  x_post_jan_3.md
shield/bindings/go/: shield.go
shield/bindings/nodejs/: sentinel_shield.js
shield/cmake/: sentinel-shield-config.cmake.in
shield/config/: example.json  prometheus.yml
shield/data/: blocklist.txt  injection_patterns.txt
shield/docs/: ACADEMY.md  API.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DEPLOYMENT.md  INTEGRATION.md  PERFORMANCE.md  QUICKSTART.md  START_HERE.md  TROUBLESHOOTING.md  index.md
shield/docs/academy/en/: EXAM_BANK.md  LABS.md  MODULE_0_WHY.md  MODULE_10_ENTERPRISE.md  MODULE_11_INTERNALS.md  MODULE_12_CUSTOM_GUARDS.md  MODULE_13_PLUGINS.md  MODULE_14_PERFORMANCE.md  MODULE_15_CAPSTONE.md  MODULE_16_POLICY_EBPF.md  MODULE_17_THREAT_HUNTER.md  MODULE_18_WATCHDOG.md  MODULE_19_COGNITIVE.md  MODULE_1_ATTACKS.md  MODULE_20_PQC.md  MODULE_21_SHIELD_STATE.md  MODULE_22_CLI_ADVANCED.md  MODULE_2_ARCHITECTURE.md  MODULE_3_INSTALLATION.md  MODULE_4_RULES.md  MODULE_5_INTEGRATION.md  MODULE_6_GUARDS.md  MODULE_7_PROTOCOLS.md  MODULE_8_HA.md  MODULE_9_MONITORING.md
shield/docs/academy/ru/: EXAM_BANK.md  LABS.md  MODULE_17_THREAT_HUNTER.md  MODULE_18_WATCHDOG.md  MODULE_19_COGNITIVE.md  MODULE_20_PQC.md  MODULE_21_SHIELD_STATE.md  MODULE_22_CLI_ADVANCED.md
shield/docs/api/: REST_API.md
shield/docs/commands/: reference.md
shield/docs/protocols/: specification.md
shield/docs/tutorials/: 01_protect_first_llm.md  02_detect_jailbreak.md  02_jailbreak_detection.md  03_output_filtering.md  04_context_management.md  05_rate_limiting.md  06_high_availability.md  07_custom_guards.md  08_pattern_engineering.md  09_monitoring.md  10_red_team_testing.md
shield/examples/: protect_llm.c  shield-production.conf  shield.conf
shield/examples/go/: main.go
shield/examples/plugins/: custom_guard_plugin.c
shield/grafana/: shield-dashboard.json
shield/include/: protocol_saf.h  protocol_sbp.h  protocol_shsp.h  protocol_ssrp.h  protocol_stp.h  protocol_zdp.h  sentinel_shield.h  shield_alert.h  shield_anomaly.h  shield_api.h  shield_audit.h  shield_base64.h  shield_batch.h  shield_blocklist.h  shield_canary.h  shield_circuit_breaker.h  shield_classifier.h  shield_cli.h  shield_common.h  shield_context.h  shield_context_window.h  shield_ebpf.h  shield_embedding.h  shield_encoding.h  shield_entropy.h  shield_event.h  shield_ffi.h  shield_fingerprint.h  shield_guard.h  shield_ha.h  shield_hashtable.h  shield_health.h  shield_history.h  shield_json.h  shield_mempool.h  shield_metrics.h  shield_ngram.h  shield_output_filter.h  shield_pattern.h  shield_platform.h  (+27 more)
shield/include/core/: shield_log.h  shield_types.h
shield/include/protocols/: sllm.h
shield/src/: main.c
shield/src/api/: handlers.c  http_api.c
shield/src/cli/: cli.c  cmd_config.c  cmd_debug.c  cmd_guard.c  cmd_ha.c  cmd_network.c  cmd_policy.c  cmd_security.c  cmd_show.c  cmd_system.c  cmd_zone_rule.c  commands.c  commands_extended.c
shield/src/core/: alert.c  anomaly.c  audit.c  batch.c  blocklist.c  canary.c  classifier.c  cognitive_sig.c  config.c  context.c  context_window.c  ebpf.c  embedding.c  encoding.c  event.c  fingerprint.c  guard.c  ha.c  health.c  history.c  http_client.c  metrics.c  ngram.c  output_filter.c  pattern.c  plugin.c  policy_engine.c  pqc.c  quarantine.c  ratelimit.c  report.c  request_log.c  response_validator.c  rule.c  safety_prompt.c  sanitizer.c  secure_comm.c  semantic.c  session.c  shield_state.c  (+10 more)
shield/src/ebpf/: ebpf.c  ebpf_loader.c  shield_xdp.c
shield/src/ffi/: ffi.c
shield/src/guards/: agent_guard.c  api_guard.c  llm_guard.c  mcp_guard.c  rag_guard.c  tool_guard.c
shield/src/protocols/: saf.c  sbp.c  sem.c  sgp.c  shsp.c  siem.c  sla.c  sllm.c  smrp.c  spp.c  sqp.c  srp.c  ssigp.c  ssrp.c  stls.c  stp.c  stt.c  szaa.c  zdp.c  zhp.c  zrp.c
shield/src/utils/: base64.c  circuit_breaker.c  common.c  entropy.c  hashtable.c  json.c  mempool.c  platform.c  retry.c  ringbuf.c  string.c  syslog.c  timer.c  webhook.c
shield/tests/: bench_core.c  integration_tests.c  run_tests.sh  test_cli.c  test_core.c  test_security.c  test_sllm.c  unit_tests.c
signatures/: README.md  jailbreaks-manifest.json  jailbreaks.json  keywords.json  manifest.json  pii.json
strike/: cli.py  context_manager.py  dynamic_generator.py  evolutionary_cracker.py  executor.py  gandalf_tester.py  genetic_engine.py  inverter.py  orchestrator.py  targets.py  unified_controller.py  universal_controller.py  validator.py
tests/: test_lasso_patterns.py
(+549 files in other folders)
